[package]
name = "imgui-gilrs"
version = "0.1.0"
edition = "2021"
description = "Gamepad navigation support for imgui"
license = "MIT/Apache-2.0"
keywords = ["gilrs", "imgui", "gamepad"]
readme = "README.md"
homepage = "https://github.com/Calcoph/imgui-gilrs"
repository = "https://github.com/Calcoph/imgui-gilrs"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10"
imgui = "0.11"
imgui-winit-support = { version = "0.11.0", optional = true }
winit = { version = "0.29", optional = true }

[features]
winit = ["dep:winit", "imgui-winit-support"]
#default = ["winit"]

[dev-dependencies]
gilrs = "0.10"
imgui-wgpu = "0.24"
wgpu = "0.17"
pollster = "0.3"

[patch.crates-io]
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "89394e0" }
