[package]
name = "imgui-gilrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10"
imgui = "0.11"
imgui-winit-support = { version = "0.11.0", optional = true }
winit = { version = "0.29", optional = true }

[features]
winit = ["dep:winit", "imgui-winit-support"]
#default = ["winit"]

[patch.crates-io]
imgui = { git = "https://github.com/Calcoph/imgui-rs", branch = "uptodate-winit" }
imgui-winit-support = { git = "https://github.com/Calcoph/imgui-rs", branch = "uptodate-winit" }
