[package]
name = "imgui-gilrs"
version = "0.1.0"
edition = "2021"
description = "Gamepad navigation support for imgui"
license = "MIT/Apache-2.0"
keywords = ["gilrs", "imgui", "gamepad"]
readme = "README.md"
homepage = "https://github.com/Calcoph/imgui-gilrs"
repository = "https://github.com/Calcoph/imgui-gilrs"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.11"
imgui = "0.12"
imgui-winit-support = { version = "0.13", optional = true }
winit = { version = "0.30", optional = true }

[features]
winit = ["dep:winit", "imgui-winit-support"]
#default = ["winit"]

[dev-dependencies]
gilrs = "0.11"
imgui-wgpu = "0.28"
wgpu = "29"
pollster = "0.4"
